[package]
name = "p2pdemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 0.47及以上版本需要安装protoc，参考https://github.com/libp2p/rust-libp2p
libp2p = "0.46.1"
tokio = { version = "1.21.1", features = ["full"] }